# rs-rocket-horaire

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: form.html
