[package]
name = "rs-rocket-horaire"
version = "0.1.0"
authors = ["Christian FOUCHER <christian.foucher@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"

horaire = { git = "https://github.com/prisme60/rs-horaire.git" }

lazy_static = "*"
sms_freemobile_api = { git = "https://github.com/prisme60/rs-sms-freemobile-api.git"}
