[package]
name = "rs-rocket-horaire"
version = "0.2.0"
authors = ["Christian FOUCHER <christian.foucher@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
rocket = "*"
rocket_codegen = "*"

horaire = { git = "https://github.com/prisme60/rs-horaire.git" }

lazy_static = "*"
sms_freemobile_api = { git = "https://github.com/prisme60/rs-sms-freemobile-api.git"}
